# docslice

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/docslice/: __init__.py  __main__.py  log.py
src/docslice/adapters/: __init__.py  docx_writer.py  epub_reader.py  file_io.py  gdocs_auth.py  gdocs_writer.py  pdf_reader.py  protocols.py
src/docslice/domain/: __init__.py  splitter.py  text_cleanup.py
src/docslice/entrypoints/: __init__.py  cli.py
src/docslice/service_layer/: __init__.py  converter.py
tests/unit/: test_converter.py  test_docx_writer.py  test_gdocs_writer.py  test_splitter.py  test_text_cleanup.py
