[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docslice"]

[project]
name = "docslice"
version = "0.1.0"
description = "Extract text from PDF/EPUB and slice into ~3 MB chunks for LLM indexing."
requires-python = ">= 3.11"
license = "MIT"
dependencies = [
    "PyMuPDF>=1.24",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=7",
    "pytest-cov>=5",
]

[project.scripts]
docslice = "docslice.entrypoints.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "TCH", "D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D102", "D103", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/docslice"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[[tool.mypy.overrides]]
module = ["fitz", "ebooklib", "bs4", "pymupdf4llm", "docx", "docx.*"]
ignore_missing_imports = true
